# ensemblefs

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api_reference.html  core.html  ensemblefs.core.html  ensemblefs.feature_selectors.html  ensemblefs.html  ensemblefs.merging_strategies.html  ensemblefs.metrics.html  feature_selection_pipeline.html  feature_selectors.html  genindex.html  index.html  installation.html  introduction.html  mergers.html  metrics.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api_reference.doctree  core.doctree  ensemblefs.core.doctree  ensemblefs.doctree  ensemblefs.feature_selectors.doctree  ensemblefs.merging_strategies.doctree  ensemblefs.metrics.doctree  environment.pickle  feature_selection_pipeline.doctree  feature_selectors.doctree  index.doctree  installation.doctree  introduction.doctree  mergers.doctree  metrics.doctree  modules.doctree  usage.doctree
.github/workflows/: doc.yml  publish.yml  tests.yml
_modules/: index.html
_modules/ensemblefs/: feature_selection_pipeline.html  utils.html
_modules/ensemblefs/core/: data_processor.html  feature.html  novovicova.html  pareto.html
_modules/ensemblefs/feature_selectors/: base_selector.html  f_statistic_selector.html  lasso_selector.html  mrmr_selector.html  mutual_info_selector.html  random_forest_selector.html  svm_selector.html  xgboost_selector.html
_modules/ensemblefs/merging_strategies/: base_merger.html  borda_merger.html  union_of_intersections_merger.html
_modules/ensemblefs/metrics/: performance_metrics.html  stability_metrics.html
_modules/moosefs/: feature_selection_pipeline.html
_modules/moosefs/core/: data_processor.html  feature.html  novovicova.html  pareto.html
_modules/moosefs/feature_selectors/: base_selector.html  default_variance.html  elastic_net_selector.html  f_statistic_selector.html  lasso_selector.html  mrmr_selector.html  mutual_info_selector.html  random_forest_selector.html  svm_selector.html  variance_selectors.html  xgboost_selector.html
_modules/moosefs/merging_strategies/: arithmetic_mean_merger.html  base_merger.html  borda_merger.html  consensus_merger.html  l2_norm_merger.html  (+1 more)
_sources/: api_reference.rst.txt  core.rst.txt  ensemblefs.core.rst.txt  ensemblefs.feature_selectors.rst.txt  ensemblefs.merging_strategies.rst.txt  ensemblefs.metrics.rst.txt  ensemblefs.rst.txt  feature_selection_pipeline.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  mergers.rst.txt  metrics.rst.txt  modules.rst.txt  usage.rst.txt
docs/source/: conf.py  feature_selection_pipeline.rst  feature_selectors.rst  index.rst  mergers.rst  metrics.rst
ensemblefs/: __init__.py  feature_selection_pipeline.py  utils.py
ensemblefs/core/: __init__.py  data_processor.py  feature.py  novovicova.py  pareto.py
ensemblefs/feature_selectors/: __init__.py  base_selector.py  f_statistic_selector.py  lasso_selector.py  mrmr_selector.py  mutual_info_selector.py  random_forest_selector.py  svm_selector.py  variance_selectors.py  xgboost_selector.py
ensemblefs/merging_strategies/: __init__.py  base_merger.py  borda_merger.py  consensus_merger.py  l2_norm_merger.py  union_of_intersections_merger.py
ensemblefs/metrics/: __init__.py  performance_metrics.py  stability_metrics.py
moosefs/: __init__.py  feature_selection_pipeline.py  utils.py
moosefs/core/: __init__.py  data_processor.py  feature.py  novovicova.py  pareto.py
moosefs/feature_selectors/: __init__.py  base_selector.py  default_variance.py  elastic_net_selector.py  f_statistic_selector.py  lasso_selector.py  mrmr_selector.py  mutual_info_selector.py  random_forest_selector.py  svm_selector.py  variance_selectors.py  xgboost_selector.py
moosefs/merging_strategies/: __init__.py  arithmetic_mean_merger.py  base_merger.py  borda_merger.py  consensus_merger.py  l2_norm_merger.py  union_of_intersections_merger.py
moosefs/metrics/: __init__.py  performance_metrics.py  stability_metrics.py
scripts/: config.yml  main.py  utils.py
tests/: config_test.yml  test_base_merger_validation.py  test_consensus_merger.py  test_data.csv  test_data_processor.py  test_expected_features.py  test_feature.py  test_fs_methods.py  test_main_script.py  test_merging.py  test_metrics.py  test_novovicova.py  test_pareto.py  test_pipeline_internals.py  test_pipeline_method.py  test_pipeline_process.py  test_reproducibility.py  test_shim.py  test_stability_metrics.py  test_utils.py  test_variance_default.py
tutorials/: advanced_example.ipynb  getting_started.ipynb  simple_example.ipynb
(+2 files in other folders)
