[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "ensemblefs"
version = "0.0.1"
description = "Customizable Ensemble Feature Selection pipeline using Multi-Objective Optimization"
readme = "README.md"
authors = [
    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn>=1.5.0",
    "pyyaml",
    "xgboost",
    "ranky",
    "mrmr_selection",
    "scipy>=1.11",
    "joblib"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/arthurbabey/ensemblefs"
Documentation = "https://arthurbabey.github.io/ensemblefs/"

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme"]
build = ["build"]
lint = ["pre-commit"]

[project.scripts]
efs-pipeline = "scripts.main:main"

[tool.hatch.build.targets.wheel]
include = [
    "ensemblefs/**",
    "scripts/**",
    "README.md",
    "LICENSE",
]
