[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "moose-fs"
version = "0.0.1"
description = "MOOSE-FS: Multi-Objective Optimized Ensemble Feature Selection"
readme = "README.md"
authors = [
    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn>=1.5.0",
    "pyyaml",
    "xgboost",
    "ranky",
    "mrmr_selection",
    "scipy>=1.11",
    "joblib"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/arthurbabey/ensemblefs"
Documentation = "https://arthurbabey.github.io/ensemblefs/"

[project.optional-dependencies]
# Test dependencies
test = [
    "pytest>=7",
    "coverage[toml]",
]

# Documentation dependencies
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

# Developer tools: includes test and docs deps plus tooling
dev = [
    # Lint/format
    "ruff>=0.6",
    # Build and publish tooling
    "build>=1",
    "twine>=5",
    # Testing
    "pytest>=7",
    "coverage[toml]",
    # Docs
    "sphinx>=7",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    # Git hooks
    "pre-commit",
]

[project.scripts]
efs-pipeline = "scripts.main:main"

[tool.hatch.build.targets.wheel]
include = [
    "moosefs/**",
    "scripts/**",
    "README.md",
    "LICENSE",
]

# Ruff configuration for linting, formatting, and import sorting
[tool.ruff]
required-version = "0.13.0"
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
    "docs/build",
    "tutorials/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["moosefs"]
combine-as-imports = true
force-sort-within-sections = true
